# swift-tools-support-core

./: CMakeLists.txt
Sources/TSCBasic/: CMakeLists.txt
Sources/TSCLibc/: CMakeLists.txt
Sources/TSCclibc/: CMakeLists.txt
